modal fixed on small devices and logout button postition fixed

--- a/src/components/Popup/Modal.css
+++ b/src/components/Popup/Modal.css
@@ -55,3 +55,17 @@
     }
   }
 }
+@media (max-width: 639px) {
+  .modal {
+    .content {
+      width: 80%;
+      padding: 20px;
+
+      div {
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+      }
+    }
+  }
+}
