--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
-  padding: 14px 0 50px 0;
+  padding: 14px 0 100px 0;
   position: fixed;
   transition: 200ms;
 
